--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
 		"supabase": "^1.64.8",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"sveltekit-superforms": "1.0.0-rc.6",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
