--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 		"supabase": "^1.64.8",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
-		"sveltekit-superforms": "1.0.0",
+		"sveltekit-superforms": "^1.0.0",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
